# nmea_simulator

./: .gitignore  Android.bp  Android.bp_  CMakeLists.txt  NmeaSimulator.cpp  NmeaSimulator.hpp  fakegps.c  fakegps.cpp  fakegps.py  fakegps.rc  main.cpp  requirements.txt  setup.py  start.sh
cpp/: Android.bp  CMakeLists.txt  NmeaGenerator.cpp  NmeaGenerator.hpp  NmeaSimulator.cpp  NmeaSimulator.hpp  PtyHandler.cpp  PtyHandler.hpp  main.cpp  start.sh
cpp/doc/: msgtypes.md
fakegps/: CMakeLists.txt  fakegps.cpp  fakegps.py  requirements.txt  start_py.sh
rs/: Android.bp  Cargo.toml  build.md  cargo.out
rs/src/: main.rs  nmea_generator.rs  nmea_simulator.rs  pty_handler.rs
rs/target.tmp/: .rustc_info.json
rs/target.tmp/debug/.fingerprint/autocfg-615de90becbae84c/: lib-autocfg  lib-autocfg.json
rs/target.tmp/debug/.fingerprint/libc-9d51af3ed2a38bc6/: build-script-build-script-build  build-script-build-script-build.json
rs/target.tmp/debug/.fingerprint/memoffset-77c2347cda80d9ce/: build-script-build-script-build  build-script-build-script-build.json
rs/target.tmp/debug/.fingerprint/num-traits-ffae450f28796b8a/: build-script-build-script-build  build-script-build-script-build.json
rs/target.tmp/debug/.fingerprint/proc-macro2-2cb24ce2d59c7108/: lib-proc_macro2  lib-proc_macro2.json
rs/target.tmp/debug/.fingerprint/proc-macro2-44b0cb626e450880/: run-build-script-build-script-build  run-build-script-build-script-build.json
rs/target.tmp/debug/.fingerprint/proc-macro2-5380452556941c66/: build-script-build-script-build  build-script-build-script-build.json
rs/target.tmp/debug/.fingerprint/quote-799ff3caed375694/: lib-quote  lib-quote.json
rs/target.tmp/debug/.fingerprint/signal-hook-5086c4040ae8a2bc/: build-script-build-script-build  build-script-build-script-build.json
rs/target.tmp/debug/.fingerprint/syn-6d92f3140f5b5c7d/: lib-syn  lib-syn.json
rs/target.tmp/x86_64-unknown-linux-gnu/debug/: nmea_simulator.d
socat/: Android.bp
socat/socat-1.8.0.1/: configure
socat/socat-1.8.0.1/doc/: socat.1  socat.html
(+52 files in other folders)
